# music-manager

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml  rust_cross_os.yml
src/: main.rs  ui.rs  util.rs
src/data/: database.rs  mod.rs  song.rs
src/edit/: mod.rs  ui.rs
src/edit/app/: actions.rs  dir.rs  mod.rs  song.rs
src/edit/inputs/: key.rs  mod.rs
src/edit/io/: handler.rs
src/tui/: mod.rs  ui.rs
src/tui/app/: actions.rs  dir.rs  mod.rs
src/tui/inputs/: events.rs  mod.rs
src/tui/io/: handler.rs  mod.rs
