[package]
name = "music-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = "0.6.3"
eyre = "0.6.5"
clap = {version = "~3.0.0-beta.5", features = ["cargo", "wrap_help"] }
metaflac = "0.2.5"
directories-next = "2"
tui = {version = "0.16", features = ["crossterm"]}
crossterm = "0.22"
unicode-width  = "0.1"
debug_stub_derive = "0.3"
crossbeam = "0.8"
tokio = {version = "1.14", features=["full"]}
log = "0.4"
tui-logger = "0.6"
strum = "0.23"
strum_macros = "0.23"
dialoguer = "0.9.0"
rusqlite = { version = "0.26", features = ["time"] }
time = {version = "0.3.5", features = ["local-offset"]}
reqwest = { version = "0.11", features = ["blocking"] }
image = "0.23"
